[gd_scene load_steps=2 format=3 uid="uid://c1sucnaub2yhn"]

[ext_resource type="Script" path="res://louis/microscope_game/microscope.gd" id="1_u0ooi"]

[node name="Microscope" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0ooi")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Find the right number of pollen in the sample"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Pollen"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Micro 
Plastic"
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(400, 300)
render_target_update_mode = 4

[node name="Sample" type="Node2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport"]

[node name="Plate" type="RigidBody2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample"]

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample/Plate"]

[node name="Polygon2D" type="Polygon2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample/Plate/Sprite2D"]
color = Color(0.694118, 0.694118, 0.694118, 1)
polygon = PackedVector2Array(-484, -181, -488, 186, 532, 207, 511, -185)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample/Plate"]

[node name="MicroBodies" type="Node2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample"]

[node name="CircleLense" type="Sprite2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample"]

[node name="Polygon2D" type="Polygon2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample/CircleLense"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-230, 165, -238, -155, 216, -161, 217, 163, -149, 168, -166, 19, -84, 72, -8, 87, 88, 84, 145, 53, 151, 3, 147, -47, 117, -92, 72, -106, -12, -116, -47, -112, -84, -88, -110, -42, -116, -2, -93, 63, -168, 15, -151, 168)

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/VBoxContainer2/HBoxContainer/SubViewportContainer/SubViewport/Sample/CircleLense"]

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 48

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="ButtonMoveLeft" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move"
horizontal_alignment = 1

[node name="ButtonMoveRight" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 150
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Focus"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSlider" type="VSlider" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
min_value = -1.0
max_value = 1.0
step = 0.1
value = -1.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -1.0
max_value = 1.0
step = 0.1
value = -1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="LabelVSlider" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="LabelHSlider" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Pollen Number"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Submit"

[node name="LabelValidated" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/ButtonMoveLeft" to="." method="_on_button_move_left_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/ButtonMoveLeft" to="." method="_on_button_move_left_button_up"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/ButtonMoveRight" to="." method="_on_button_move_right_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/ButtonMoveRight" to="." method="_on_button_move_right_button_up"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
